syntax = "proto3";

package protos;

option go_package = "/protos";

service ShippingAddressProtoFunc{
   rpc GetDefaultShippingAddress (ShippingAddressRequest) returns (ShippingAddressResponse);
}


message ShippingAddressRequest{
   string userId = 1;
}


message ShippingAddress{
   string user_id = 1;
   string shipping_address_id = 2;
   string first_name = 3;
   string last_name = 4;
   string address_line_1 = 5;
   string address_line_2 = 6;
   string city = 7;
   string state = 8;
   string phone = 9;
   double pincode = 10;
   string address_type = 11;
   bool default_address = 12;
   double shipping_cost = 13;
}

message ShippingAddressResponse{
   ShippingAddress shippingAddress = 1;
}

